/**
 * Copyright (c) 2022 Peking University and Peking University Institute for Computing and Digital Economy
 * SCOW is licensed under Mulan PSL v2.
 * You can use this software according to the terms and conditions of the Mulan PSL v2.
 * You may obtain a copy of Mulan PSL v2 at:
 *          http://license.coscl.org.cn/MulanPSL2
 * THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND,
 * EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT,
 * MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
 * See the Mulan PSL v2 for more details.
 */

syntax = "proto3";

import "common/money.proto";

package scow.server;

// NOT_FOUND: the user is not in the account
message SetJobChargeLimitRequest {
  string tenant_name = 1;
  string account_name = 2;
  string user_id = 3;
  common.Money limit = 4;
}

message SetJobChargeLimitReply {}

// NOT_FOUND: the user is not in the account || the user doesn't have a charge
// limit
message CancelJobChargeLimitRequest {
  string tenant_name = 1;
  string account_name = 2;
  string user_id = 3;
}

message CancelJobChargeLimitReply {}

service JobChargeLimitService {

  rpc SetJobChargeLimit(SetJobChargeLimitRequest)
      returns (SetJobChargeLimitReply);

  rpc CancelJobChargeLimit(CancelJobChargeLimitRequest)
      returns (CancelJobChargeLimitReply);
}
